Fix navigation bar alignment

--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ small {
 }
 
 #fficons {
+  padding-left: 20px;
   width: 300px;
   align-self: center;
 }
@@ -78,6 +79,7 @@ small {
   justify-content: center;
   align-items: center;
   align-self: center;
+  text-align: center;
 }
 
 #nytlogo {
